# jaf

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  format_all_code.bat  generate_x64_vs2022.bat  setenv.gitignore.bat
src/: CMakeLists.txt
src/Communication/: CMakeLists.txt  define_constant.h  endpoint.h  init_socket.h  run_result.h
src/Communication/Impl/: channel_user.cpp  channel_user.h  communication.cpp  communication.h  communication_head.h  communication_include.h  empty_channel.h  i_iocp_user.h  iocp.cpp  iocp.h  iocp_head.h  pack.cpp  pack.h  recv_buffer.cpp  recv_buffer.h  serial_port.cpp  serial_port.h  serial_port_channel.cpp  serial_port_channel.h  tcp_channel.cpp  tcp_channel.h  tcp_client.cpp  tcp_client.h  tcp_server.cpp  tcp_server.h  udp.cpp  udp.h  udp_channel.cpp  udp_channel.h
src/Communication/Impl/linux/: channel.cpp  channel.h  channel_read_write_helper.cpp  channel_read_write_helper.h  communication.cpp  communication.h  head.h  i_get_completion_port.h  i_get_epoll_fd.h  include.h  serial_port.cpp  serial_port.h  serial_port_channel.cpp  serial_port_channel.h  tcp_channel.cpp  tcp_channel.h  tcp_channel_read.cpp  tcp_channel_read.h  tcp_channel_read_write_helper.h  tcp_channel_read_write_helper.ipp  tcp_channel_write.cpp  tcp_channel_write.h  tcp_client.cpp  tcp_client.h  tcp_server.cpp  tcp_server.h  udp.cpp  udp.h  udp_channel.cpp  udp_channel.h
src/Communication/Impl/tool/: run_until_timeout.h  run_with_timeout.h  stoppable_run.h
src/Communication/Impl/windows/: channel_read_write_helper.cpp  channel_read_write_helper.h  communication.cpp  communication.h  head.h  i_get_completion_port.h  include.h  serial_port.cpp  serial_port.h  serial_port_channel.cpp  serial_port_channel.h  tcp_channel.cpp  tcp_channel.h  tcp_client.cpp  tcp_client.h  tcp_server.cpp  tcp_server.h  udp.cpp  udp.h  udp_channel.cpp  udp_channel.h
src/Communication/Interface/buffer/: i_reader.h  i_writer.h
src/Communication/Interface/communication/: comm_struct.h  i_channel.h  i_channel_user.h  i_communication.h  i_deal_pack.h  i_pack.h  i_recv_buffer.h  i_serial_port.h  i_tcp_client.h  i_tcp_server.h  i_udp.h  i_unpack.h
src/Communication/impl/: communication.cpp  empty_channel.h
src/Communication/impl/linux/: channel.cpp  channel.h  channel_read_write_helper.cpp  channel_read_write_helper.h  communication.cpp  communication.h  head.h  include.h  serial_port.cpp  serial_port.h  serial_port_channel.cpp  tcp_channel.cpp  tcp_channel.h  tcp_client.cpp  tcp_client.h  tcp_server.cpp  tcp_server.h  udp.cpp  udp.h  udp_channel.cpp  udp_channel.h
src/Communication/impl/windows/: channel_read_write_helper.cpp  channel_read_write_helper.h  communication.cpp  head.h  (+15 more)
src/CommunicationDemo/: CMakeLists.txt  main.cpp  test_serial_port.cpp  test_tcp_client.cpp  test_tcp_server.cpp  test_udp.cpp
src/CommunicationTest/: CMakeLists.txt  deal_pack.cpp  deal_pack.h  main.cpp  main_class.cpp  main_class.h  run_with_timeout_test.cpp  test_serial.cpp  test_tcp.cpp  test_tcp_client.cpp  test_udp.cpp  unpack.cpp  unpack.h
src/CommunicationTest/gtest/: run_with_timeout_test.cpp  test_serial.cpp
src/CommunicationTest/tool/: run_with_timeout.h
src/Log/: CMakeLists.txt  define_log_export.h  log_head.h
src/Log/Impl/: common_logger.cpp  common_logger.h  console_appender.cpp  console_appender.h  create_log_event.cpp  create_log_event.h  empty_logger.h  event.cpp  event.h  filter.cpp  filter.h  get_log_helper.h  log_format.cpp  log_format.h  log_macro.h  logger.cpp  logger.h  manage_logger.h
src/Log/impl/: common_logger.cpp  console_appender.cpp  create_log_event.cpp  event.cpp  filter.cpp  log_format.cpp  logger.cpp
src/LogTest/: CMakeLists.txt  main.cpp
src/Time/: CMakeLists.txt  time_head.h
src/Time/Impl/: get_time_high_precision.cpp  get_time_high_precision.h  get_time_tick.cpp  get_time_tick.h  timer.cpp  timer.h  timer2.cpp  timer2.h
src/Time/Interface/: i_get_time.h  i_timer.h
src/Time/impl/: get_time_high_precision.h  get_time_tick.cpp  get_time_tick.h  timer.cpp  timer2.cpp
src/TimeTest/: CMakeLists.txt  co_timer_test.cpp  main.cpp  time2_test.cpp  time_test.cpp
src/TimeTest/gtest/: time2_test.cpp  time_test.cpp
src/UtilTest/: CMakeLists.txt  main.cpp  test_concurrent_queue.cpp  test_control_start_stop.cpp  test_finally.cpp  test_multi_threads_exec.cpp  test_multi_threads_exec.h  test_simple_thread_pool.cpp  test_single_thread_exec.cpp  test_single_thread_exec.h  test_wait_notice.cpp
src/UtilTest/gtest/: test_concurrent_queue.cpp  test_finally.cpp  test_simple_thread_pool.cpp
src/all_test/: CMakeLists.txt  main.cpp
src/global_thread_pool/: CMakeLists.txt  define_global_thread_pool_export.h  global_thread_pool.cpp  global_thread_pool.h
src/global_thread_pool/impl/: global_thread_pool.cpp
src/global_timer/: CMakeLists.txt  co_await_time.h  co_sleep.h  co_timer.h  define_global_timer_export.h  global_timer.cpp  global_timer.h
src/global_timer/impl/: global_timer.cpp
src/red_black_tree_test/: CMakeLists.txt  main.cpp  red_black_tree_test.cpp
src/red_black_tree_test/gtest/: red_black_tree_test.cpp
src/red_black_tree_test_efficiency/: CMakeLists.txt  main.cpp
src/time/: CMakeLists.txt  time_head.h
src/time/Impl/: CommonTimer.h  HighPrecisionTimer.cpp  HighPrecisionTimer.h  TickTimer.cpp  TickTimer.h  co_await_time.h  co_notify.h  co_timer.h  common_timer.h  get_time_high_precision.cpp  get_time_high_precision.h  get_time_tick.cpp  get_time_tick.h  high_precision_timer.cpp  high_precision_timer.h  tick_timer.cpp  tick_timer.h  timer.cpp  timer.h  timer2.cpp  timer2.h
src/time/Interface/: i_get_time.h  i_timer.h
src/util/: co_await.h  co_await_times.h  co_coroutine.h  co_coroutine_with_wait.h  co_wait_all_tasks_done.h  co_wait_notice.h  co_wait_notices.h  co_wait_util_controlled_stop.h  co_wait_util_stop.h  concurrent_queue.h  control_start_stop.h  execute_at_end.h  finally.h  fix_string.h  i_thread_pool.h  latch.h  multi_threads_exec.h  red_black_tree.h  simple_thread_pool.h  single_thread_exec.h  stopwatch.h  threads_exec.h
(+57 files in other folders)
