ADD_SUBDIRECTORY(Communication)
ADD_SUBDIRECTORY(CommunicationTest)
ADD_SUBDIRECTORY(Log)
ADD_SUBDIRECTORY(LogTest)
ADD_SUBDIRECTORY(Time)
ADD_SUBDIRECTORY(global_timer)
ADD_SUBDIRECTORY(TimeTest)
ADD_SUBDIRECTORY(UtilTest)
ADD_SUBDIRECTORY(red_black_tree_test)
ADD_SUBDIRECTORY(red_black_tree_test_efficiency)