PROJECT(TimeTest)

file(GLOB_RECURSE PROJECT_ROOT_FILES ${PROJECT_SOURCE_DIR}/*.h ${PROJECT_SOURCE_DIR}/*.c ${PROJECT_SOURCE_DIR}/*.cpp)

set(
    ALL_FILES 
    ${PROJECT_ROOT_FILES}
)

source_group(TREE ${CMAKE_SOURCE_DIR}/src FILES ${ALL_FILES})

ADD_EXECUTABLE(
    ${PROJECT_NAME}
    ${ALL_FILES}
)

target_link_libraries(${PROJECT_NAME}
    Log
    Time
    gtest
)

INCLUDE_DIRECTORIES("./")
INCLUDE_DIRECTORIES("../")
INCLUDE_DIRECTORIES("../../include")
INCLUDE_DIRECTORIES("../../3rdparty")
INCLUDE_DIRECTORIES("../Log")
INCLUDE_DIRECTORIES("../Time")
